86a3bn5p9 ajustando makefile

--- a/.env
+++ b/.env
@@ -9,6 +9,10 @@ DRUPAL_LOCAL=./${PROJECT_NAME}
 DRUPAL_ROOT=/opt/drupal
 DRUSH_VERSION=^10
 
+DRUPAL_CONTRIB_MODULES=drush/drush drupal/devel drupal/devel_kint_extras drupal/admin_toolbar
+DRUPAL_CONTRIB_MODULES_INSTALL=drupal/devel drupal/devel_kint_extras drupal/admin_toolbar
+
+
 DB_CONTAINER_NAME=${PROJECT_NAME}_db
 DB_TAG=10.4
 DB_PORT=3306
