--- a/.env
+++ b/.env
@@ -9,9 +9,8 @@ DRUPAL_LOCAL=./${PROJECT_NAME}
 DRUPAL_ROOT=/opt/drupal
 DRUSH_VERSION=^10
 
-DRUPAL_CONTRIB_MODULES=drush/drush drupal/devel drupal/devel_kint_extras drupal/admin_toolbar
-DRUPAL_CONTRIB_MODULES_INSTALL=drupal/devel drupal/devel_kint_extras drupal/admin_toolbar
-
+DRUPAL_CONTRIB_MODULES_INSTALL="drush/drush drupal/devel drupal/devel_kint_extras drupal/admin_toolbar drupal/admin_toolbar_tools"
+DRUPAL_CONTRIB_MODULES_ENABLE="drupal/devel drupal/devel_kint_extras drupal/admin_toolbar drupal/admin_toolbar_tools"
 
 DB_CONTAINER_NAME=${PROJECT_NAME}_db
 DB_TAG=10.4
@@ -21,4 +20,3 @@ DB_USER=drupal
 DB_PASSWORD=drupal
 DB_NAME=drupal
 DB_URL="mysql://root:${DB_ROOT_PASSWORD}@db:${DB_PORT}/${DB_NAME}"
-
