PostgreSQL + twig-debug + pg_trpm

--- a/.env
+++ b/.env
@@ -3,19 +3,23 @@ PROJECT_CONFIG_PATH=./config
 
 DRUPAL_CONTAINER_NAME=${PROJECT_NAME}_php
 DRUPAL_PORTS=8080:80
-DRUPAL_VERSION=10.2.2
+DRUPAL_VERSION=10.1.7
 DRUPAL_IMAGE_VERSION=${DRUPAL_VERSION}-apache
 DRUPAL_LOCAL=./${PROJECT_NAME}
 DRUPAL_ROOT=/opt/drupal
-DRUSH_VERSION=^10
+DRUSH_VERSION=^12
 
-DRUPAL_CONTRIB_MODULES_INSTALL="drush/drush drupal/devel drupal/devel_kint_extras drupal/admin_toolbar drupal/admin_toolbar_tools"
+DRUPAL_CONTRIB_MODULES_INSTALL="drush/drush:$(DRUSH_VERSION) drupal/devel drupal/devel_kint_extras drupal/admin_toolbar drupal/admin_toolbar_tools"
 DRUPAL_CONTRIB_MODULES_ENABLE="drupal/devel drupal/devel_kint_extras drupal/admin_toolbar drupal/admin_toolbar_tools"
 
 DB_CONTAINER_NAME=${PROJECT_NAME}_db
-DB_TAG=10.4
-DB_PORT=3306
+DB=postgres
+DB_URL_PREFIX=pgsql
+DB_TAG=14.13
+DB_IMAGE=$DB:$DB_TAG
+DB_PORT=5432
 DB_ROOT_PASSWORD=drupal
 DB_USER=drupal
 DB_PASSWORD=drupal
 DB_NAME=drupal
+DB_URL="$(DB_URL_PREFIX)://$(DB_USER):$(DB_PASSWORD)@db:$(DB_PORT)/$(DB_NAME)"
