86a4wp0pu correção drush + postgresql + ajustes no projeto

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ DRUPAL_LOCAL=./${PROJECT_NAME}
 DRUPAL_ROOT=/opt/drupal
 DRUSH_VERSION=^12
 
-DRUPAL_CONTRIB_MODULES_INSTALL="drush/drush:$(DRUSH_VERSION) drupal/devel drupal/devel_kint_extras drupal/admin_toolbar drupal/admin_toolbar_tools"
+DRUPAL_CONTRIB_MODULES_INSTALL=drush/drush:$(DRUSH_VERSION) drupal/devel drupal/devel_kint_extras drupal/admin_toolbar drupal/admin_toolbar_tools
 DRUPAL_CONTRIB_MODULES_ENABLE="drupal/devel drupal/devel_kint_extras drupal/admin_toolbar drupal/admin_toolbar_tools"
 
 DB_CONTAINER_NAME=${PROJECT_NAME}_db
