--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - db
     volumes:
       - ${DRUPAL_LOCAL}:${DRUPAL_ROOT}
-      - ${PROJECT_CONFIG_PATH}:${DRUPAL_ROOT}/config
+      - ${PROJECT_CONFIG_PATH}/drupal:/opt/config
   db:
     image: $DB_IMAGE
     ports:
@@ -25,7 +25,7 @@ services:
       POSTGRES_USER: $DB_USER
       POSTGRES_PASSWORD: $DB_PASSWORD
     volumes:      
-      - ./config/initdb:/docker-entrypoint-initdb.d
+      - ${PROJECT_CONFIG_PATH}/db:/docker-entrypoint-initdb.d
       - pgdata:/var/lib/postgresql/data
 
 volumes:
